--- a/blog.css
+++ b/blog.css
@@ -20,12 +20,27 @@ h6, .h6 {
 }
 
 /*
+ * Paragraph
+*/
+.indent {
+  text-indent: 25px;
+}
+
+/*
  * Code
  */
  .code {
   overflow: auto; 
   word-wrap: normal; 
   white-space: pre;
+}
+
+.blog-class {
+  color: #5c2699;
+}
+
+.blog-myclass {
+  color: #009999;
 }
 
 /*
